<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_10dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgProduct"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="@dimen/margin_10sp"
            android:src="@drawable/product_placeholder"
            app:civ_border_color="#808080"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:id="@+id/lytDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10sp"
            android:layout_toRightOf="@+id/imgProduct"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_7sp"
                android:text="@string/txt_hint_productname"
                android:textSize="@dimen/tvsize_18sp"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/txt_hint_productprice"
                android:textColor="@color/black"
                android:textSize="@dimen/tvsize_14sp" />

            <RadioGroup
                android:id="@+id/rdGrp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5sp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redio_btn_red"
                    android:visibility="gone"
                    android:textColor="@color/black" />

                <RadioButton
                    android:id="@+id/rdBlue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redio_btn_blue"
                    android:visibility="gone"
                    android:textColor="@color/black" />


                <RadioButton
                    android:id="@+id/rdGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redio_btn_green"
                    android:visibility="gone"
                    android:textColor="@color/black" />


            </RadioGroup>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/square_border">

                <Spinner
                    android:id="@+id/spBrand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="8dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/square_border">

                <EditText
                    android:id="@+id/etQty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="Enter Qty"
                    android:inputType="number"
                    android:maxLength="5"
                    android:paddingHorizontal="5dp"
                    android:paddingVertical="8dp" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_below="@+id/lytDetails"
            android:layout_marginTop="15dp"
            android:background="@color/black" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>